--- a/roles/base/tasks/rsyslog.yml
+++ b/roles/base/tasks/rsyslog.yml
@@ -7,7 +7,7 @@
         group: "{{ rsyslog['conf']['group'] }}"
         mode: "{{ rsyslog['conf']['mode'] }}"
   when: "'rsyslog' not in group_names and 'ossimcik' not in group_names"
-  with_dict: "base_ossimcik_servers"
+  with_dict: "{{ base_ossimcik_servers }}"
   notify:
     - rsyslog servisini yeniden baslat
   sudo: yes 
