--- a/roles/ansible/tasks/install.yml
+++ b/roles/ansible/tasks/install.yml
@@ -4,6 +4,6 @@
         name: "{{ item.value.name }}"
         state: "{{ item.value.state }}"
         force: "yes"
-  with_dict: "ansible_packages"
+  with_dict: "{{ansible_packages}}"
   sudo: yes
   tags: install
