--- a/roles/gitolite/tasks/install.yml
+++ b/roles/gitolite/tasks/install.yml
@@ -4,7 +4,7 @@
      name: "{{ item.value.name }}"
      state: "{{ item.value.state }}"
      force: "yes"
-  with_dict: "git_packages"
+  with_dict: "{{git_packages}}"
   sudo: "yes"
   tags: install
   register: result
